--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
 <!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8" />
-  <!-- Set the viewport width to device width for mobile -->
   <meta name="viewport" content="width=device-width" />
-  <title>Welcome to Foundation</title>
-  <!-- Included CSS Files -->
+  <title>Megaupload Affected User's Platform</title>
   <link rel="stylesheet" href="stylesheets/app.css">
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="stylesheets/ie.css">
-  <![endif]-->
-  <!-- IE Fix for HTML5 Tags -->
-  <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
@@ -22,7 +17,7 @@
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3>The Grid</h3>
+        <h3>Megaupload Affected User's Platform</h3>
         <div class="row">
           <div class="twelve columns">
             <div class="panel">
@@ -59,17 +54,6 @@
             </div>
           </div>
         </div>
-        <h3>Tabs</h3>
-        <dl class="tabs">
-          <dd><a href="#simple1" class="active">Simple Tab 1</a></dd>
-          <dd><a href="#simple2">Simple Tab 2</a></dd>
-          <dd><a href="#simple3">Simple Tab 3</a></dd>
-        </dl>
-        <ul class="tabs-content">
-          <li class="active" id="simple1Tab">This is simple tab 1's content. Pretty neat, huh?</li>
-          <li id="simple2Tab">This is simple tab 2's content. Now you see it!</li>
-          <li id="simple3Tab">This is simple tab 3's content. It's, you know...okay.</li>
-        </ul>
         <h3>Buttons</h3>
         <p><a href="#" class="small blue button">Small Blue Button</a></p>
         <p><a href="#" class="blue button">Medium Blue Button</a></p>
@@ -79,14 +63,16 @@
         <p><a href="#" class="nice radius large blue button">Nice Blue Button</a></p>
       </div>
       <div class="four columns">
-        <h4>Getting Started</h4>
-        <p>We're stoked you want to try Foundation! To get going, this file (index.html) includes some basic styles you can modify, play around with, or totally destroy to get going.</p>
-        <h4>Other Resources</h4>
-        <p>Once you've exhausted the fun in this document, you should check out:</p>
+        <h4>An initiative of</h4>
+        <div class="row image">
+          <a href="http://pirata.cat"><img src="./images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
+        </div>
+        <h4>Other promoters</h4>
+        <p>These organizations have endorsed the platform:</p>
         <ul class="disc">
-          <li><a href="http://foundation.zurb.com/docs">Foundation Documentation</a><br />Everything you need to know about using the framework.</li>
-          <li><a href="http://github.com/zurb/foundation">Foundation on Github</a><br />Latest code, issue reports, feature requests and more.</li>
-          <li><a href="http://twitter.com/foundationzurb">@foundationzurb</a><br />Ping us on Twitter if you have questions. If you build something with this we'd love to see it (and send you a totally boss sticker).</li>
+          <li><a href="">Pirate Party XX</a></li>
+          <li><a href="">Pirate Party XX</a></li>
+          <li><a href="">Pirate Party XX</a></li>
         </ul>
       </div>
     </div>
