Cleaned and with social touch.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="stylesheets/ie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
+  <link href="https://plus.google.com/112149620641776669374" rel="publisher" />
 </head>
 <body>
   <div class="container">
@@ -20,59 +21,29 @@
         <h3>Megaupload Affected User's Platform</h3>
         <div class="row">
           <div class="twelve columns">
-            <div class="panel">
-              <p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
-            </div>
+            <p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
           </div>
         </div>
-        <div class="row">
-          <div class="six columns">
-            <div class="panel">
-              <p>Six columns</p>
-            </div>
-          </div>
-          <div class="six columns">
-            <div class="panel">
-              <p>Six columns</p>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="four columns">
-            <div class="panel">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="four columns">
-            <div class="panel">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="four columns">
-            <div class="panel">
-              <p>Four columns</p>
-            </div>
-          </div>
-        </div>
-        <h3>Buttons</h3>
-        <p><a href="#" class="small blue button">Small Blue Button</a></p>
-        <p><a href="#" class="blue button">Medium Blue Button</a></p>
-        <p><a href="#" class="large blue button">Large Blue Button</a></p>
-        <p><a href="#" class="nice radius small blue button">Nice Blue Button</a></p>
-        <p><a href="#" class="nice radius blue button">Nice Blue Button</a></p>
-        <p><a href="#" class="nice radius large blue button">Nice Blue Button</a></p>
       </div>
       <div class="four columns">
+        <p><a href="https://xifrat.pirata.cat/megaupload_ca" class="nice radius large blue button wide">Join!</a></p>
+        <p><a href="" class="nice radius large white button wide">Donate</a></p>
         <h4>An initiative of</h4>
         <div class="row image">
           <a href="http://pirata.cat"><img src="./images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
         </div>
+        <div class="row">
+          <div class="twelve columns" id="social">
+            <a href="https://plus.google.com/112149620641776669374?prsrc=3" style="text-decoration:none;"><img class="social-button" src="https://ssl.gstatic.com/images/icons/gplus-16.png" alt="" style="border:0;width:16px;height:16px;padding-bottom:5px;padding-right:9px;"/></a>
+            <iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/follow_button.1326407570.html#_=1327270775544&amp;_version=2&amp;enableNewSizing=false&amp;id=twitter-widget-0&amp;lang=en&amp;screen_name=partit_pirata&amp;show_count=false&amp;show_screen_name=false&amp;size=m" class="twitter-follow-button social-button" style="width: 70px; height: 23px; " title="Twitter Follow Button"></iframe>
+            <iframe class="social-button" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpirata.cat&amp;send=false&amp;layout=standard&amp;width=80&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35&amp;appId=178224635584623" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:24px;" allowTransparency="true"></iframe>
+          </div>
+        </div>
         <h4>Other promoters</h4>
         <p>These organizations have endorsed the platform:</p>
         <ul class="disc">
-          <li><a href="">Pirate Party XX</a></li>
-          <li><a href="">Pirate Party XX</a></li>
-          <li><a href="">Pirate Party XX</a></li>
+          <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
+          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li>
         </ul>
       </div>
     </div>
