--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <div class="row">
           <div class="twelve columns">
             <p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
+            <div id="stock" class="row">
+              <div class="twelve columns">
+                <a href="http://www.flickr.com/photos/rclupes/6729919585/"><img src="http://farm8.staticflickr.com/7027/6729919585_e2c1894234.jpg" alt="#20 - Megaupload by Ricard Clupés" title="#20 - Megaupload by Ricard Clupés"></a>
+              </div>
+            </div>
+            <p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
           </div>
         </div>
       </div>
@@ -43,6 +49,7 @@
         <p>These organizations have endorsed the platform:</p>
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
+          <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
           <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li>
         </ul>
       </div>
@@ -51,10 +58,6 @@
   <!-- container -->
   <script src="javascripts/jquery.min.js"></script>
   <script src="javascripts/modernizr.foundation.js"></script>
-  <script src="javascripts/jquery.reveal.js"></script>
-  <script src="javascripts/jquery.orbit-1.3.0.js"></script>
-  <script src="javascripts/forms.jquery.js"></script>
-  <script src="javascripts/jquery.customforms.js"></script>
   <script src="javascripts/jquery.placeholder.min.js"></script>
   <script src="javascripts/app.js"></script>
 </body>
