Correct links to english.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           </div>
         </div>
         <div class="four columns">
-          <p><a href="https://xifrat.pirata.cat/megaupload_ca" class="nice radius large blue button wide">Join!</a></p>
-          <p><a href="" class="nice radius large white button wide">Donate</a></p>
+          <p><a href="https://xifrat.pirata.cat/megaupload_en" class="nice radius large blue button wide">Join!</a></p>
+          <p><a href="https://xifrat.pirata.cat/en/donacions" class="nice radius large white button wide">Donate</a></p>
           <h4>An initiative of</h4>
           <div class="row image">
             <a href="http://pirata.cat"><img src="./images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
