Last design with copy.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3>Megaupload Affected User's Platform</h3>
+        <h3>Joint complaint of the affected by the closure of Megaupload</h3>
         <ul id="lang">
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
@@ -26,14 +26,21 @@
           <li><a href="http://megaupload.pirata.cat/">English</a></li>
         </ul>
         <div class="row">
-          <div class="twelve columns">
-            <p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
+          <div class="twelve columns" id="text">
+            <p>Millions of legitimate users have been crippled by the US authority's enforcement of their law outside their jurisdiction.</p>
             <div id="stock" class="row">
               <div class="twelve columns">
                 <a href="http://www.flickr.com/photos/rclupes/6729919585/"><img src="http://farm8.staticflickr.com/7027/6729919585_e2c1894234.jpg" alt="#20 - Megaupload by Ricard Clupés" title="#20 - Megaupload by Ricard Clupés"></a>
               </div>
             </div>
-            <p>This is a twelve column section in a row. Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
+            <p>The FBI has caused incalculable damage, far in excess of the losses claimed by the content lobbies, in a failed attempt to prevent access to the media content hosted on Megaupload, some of which they claim to have been violating US copyright. However, as this content is still available via other services on the web, it shows us not only the uselessness of these measures but also serves as a reminder that these files are not necessarily, nor have been shown to be, illegal in other countries.</p>
+            <p>In contrast, by closing the service they have impeded the access to millions of archives from private individuals and organisations, causing huge personal, economic and image damages to millions of people; as well as infringing articles 197 and 198 of the Spanish Penal Code by misappropiating personal data. They have also breached basic underpinnings of the UK Data Protection Act 1998 and/or Computer Misuse Act 1990 and potentially are in violation of The British Official Secrets Act prohibiting espionage and sharing of sensitive data with foreign powers.</p>
+            <p>The damages caused by the closure of Megaupload are completely unjustified and inadmissible. For this reason Pirates of Catalonia, in collaboration with Pirate Parties International and the other Pirate Parties supporting this campaign, will facilitate submission of the complaints against the USA authorities in different countries, thus increasing the chances of a positive sentence. </p>
+            <p>In order to make this joint complaint, a platform has been created for those affected by Megaupload's shutdown, to which any person or organisation affected by this closure can  adhere, regardless of the type of account they had on Megaupload.</p>
+            <p>This initiative is intended to be a starting point for legitimate internet users to help defend themselves from the legal abuses promoted by cultural lobbies.</p>
+            <p>Regardless of ideology and our opinion regarding Megaupload, actions like the one carried out with the closure of this service cause a huge damage to the users and are an unacceptable violation of their rights.</p>
+            <p>For these reasons, we ask everyone to make a call to the population to join this initiative and spread it, as actions like this one can not and should not be forgiven. </p>
+            <p><a href="https://xifrat.pirata.cat/megaupload_en" class="nice radius large blue button">Join!</a></p>
           </div>
         </div>
       </div>
@@ -42,7 +49,7 @@
         <p><a href="https://xifrat.pirata.cat/en/donacions" class="nice radius large white button wide">Donate</a></p>
         <h4>An initiative of</h4>
         <div class="row image">
-          <a href="http://pirata.cat"><img src="./images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
+          <a href="http://pirata.cat"><img src="/images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
         </div>
         <div class="row">
           <div class="twelve columns" id="social">
@@ -52,7 +59,7 @@
           </div>
         </div>
         <h4>Other promoters</h4>
-        <p>These organizations have endorsed the platform:</p>
+        <p>These organizations have endorsed the campaign:</p>
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
