--- a/ca/index.html
+++ b/ca/index.html
@@ -6,10 +6,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Megaupload Affected User's Platform</title>
-  <link rel="stylesheet" href="stylesheets/app.css">
+  <title>Denúncia conjunta d'afectats pel tancament de Megaupload</title>
+  <link rel="stylesheet" href="/stylesheets/app.css">
   <!--[if lt IE 9]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
+    <link rel="stylesheet" href="/stylesheets/ie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <link href="https://plus.google.com/112149620641776669374" rel="publisher" />
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3>Joint complaint of the affected by the closure of Megaupload</h3>
+        <h3>Denúncia conjunta d'afectats pel tancament de Megaupload</h3>
         <ul id="lang">
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
@@ -27,20 +27,20 @@
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
-            <p>Millions of legitimate users have been crippled by the US authority's enforcement of their law outside their jurisdiction.</p>
+            <p>El tancament sobtat de Megaupload per part de les autoritats dels EEUU ha afectat milions de persones que feien un ús legítim d'aquest servei.</p>
             <div id="stock" class="row">
               <div class="twelve columns">
                 <a href="http://www.flickr.com/photos/rclupes/6729919585/"><img src="http://farm8.staticflickr.com/7027/6729919585_e2c1894234.jpg" alt="#20 - Megaupload by Ricard Clupés" title="#20 - Megaupload by Ricard Clupés"></a>
               </div>
             </div>
-            <p>The FBI has caused incalculable damage, far in excess of the losses claimed by the content lobbies, in a failed attempt to prevent access to the media content hosted on Megaupload, some of which they claim to have been violating US copyright. However, as this content is still available via other services on the web, it shows us not only the uselessness of these measures but also serves as a reminder that these files are not necessarily, nor have been shown to be, illegal in other countries.</p>
-            <p>In contrast, by closing the service they have impeded the access to millions of archives from private individuals and organisations, causing huge personal, economic and image damages to millions of people; as well as infringing articles 197 and 198 of the Spanish Penal Code by misappropiating personal data. They have also breached basic underpinnings of the UK Data Protection Act 1998 and/or Computer Misuse Act 1990 and potentially are in violation of The British Official Secrets Act prohibiting espionage and sharing of sensitive data with foreign powers.</p>
-            <p>The damages caused by the closure of Megaupload are completely unjustified and inadmissible. For this reason Pirates of Catalonia, in collaboration with Pirate Parties International and the other Pirate Parties supporting this campaign, will facilitate submission of the complaints against the USA authorities in different countries, thus increasing the chances of a positive sentence. </p>
-            <p>In order to make this joint complaint, a platform has been created for those affected by Megaupload's shutdown, to which any person or organisation affected by this closure can  adhere, regardless of the type of account they had on Megaupload.</p>
-            <p>This initiative is intended to be a starting point for legitimate internet users to help defend themselves from the legal abuses promoted by cultural lobbies.</p>
-            <p>Regardless of ideology and our opinion regarding Megaupload, actions like the one carried out with the closure of this service cause a huge damage to the users and are an unacceptable violation of their rights.</p>
-            <p>For these reasons, we ask everyone to make a call to the population to join this initiative and spread it, as actions like this one can not and should not be forgiven. </p>
-            <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="hide-on-phones hide-on-tablets nice radius large blue button">Join!</a></p>
+            <p>L'FBI ha ocasionat danys incalculables, molt superiors al benefici perseguit amb l'acció empresa, en un intent fracassat d'impedir l'accés als materials audiovisuals hostatjats a Megaupload, que podien vulnerar copyrights. No obstant, aquests continguts continuen disponibles a d'altres serveis d'Internet, fet que evidencia la ineficàcia de la mesura.</p>
+            <p>Per contra, amb el tancament del servei han impedit l'accés a milions d'arxius de particulars i organitzacions, han ocasionat greus danys personals, econòmics i d'imatge a milions de persones; i han vulnerat els artícles 197 i 198 del Codi Penal a l'apropiar-se indegudament de  dades de caràcter personal.</p>
+            <p>Els danys ocasionats pel tancament de Megaupload són totalment injustificats i inadmisibles. Per aquesta raó, Pirates de Catalunya, amb la col·laboració de Pirate Parties International i els partits pirata adherits a aquesta campanya, facilitarà la presentació de denúncies contra les autoritats dels EEUU a diversos països, i incrementarà així les possibilitats d'aconseguir una condemna.</p>
+            <p>Per a la realització d'aquesta demanda conjunta s'ha creat una plataforma d'afectats pel tancament de Megaupload, a la que pot adherir-se qualsevol persona o organització que s'hagi vist perjudicada pel tancament del servei, independentment del tipus de compte que tinguessin a Megaupload.</p>
+            <p>Aquesta iniciativa vol ser un punt de partida per a què els usuaris legítims d'Internet puguem defensar-nos davant dels abusos judicials promoguts pels lobbies culturals.</p>
+            <p>Independentment de la ideologia de cadascú i de la opinió que puguem tenir en referència a Megaupload, accions com les portades a terme amb el tancament del servei suposen un enorme perjudici per als usuaris i una vulneració inacceptable dels seus drets.</p>
+            <p>Per tot l'exposat, fem una crida a la població per a què s'uneixi a la iniciativa i la difongui, entenent que accions com la presenciada no poden ni han de quedar impunes.</p>
+            <p><a href="https://xifrat.pirata.cat/megaupload_ca" class="hide-on-phones hide-on-tablets nice radius large blue button">Uneix-te!</a></p>
             <!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -54,9 +54,9 @@
         </div>
       </div>
       <div class="four columns">
-        <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="nice radius large blue button wide">Join!</a></p>
-        <p><a href="https://xifrat.pirata.cat/en/donacions" class="nice radius large white button wide">Donate</a></p>
-        <h4>An initiative of</h4>
+        <p><a href="https://xifrat.pirata.cat/megaupload_ca" class="nice radius large blue button wide">Uneix-te!</a></p>
+        <p><a href="https://xifrat.pirata.cat/donacions" class="nice radius large white button wide">Dóna</a></p>
+        <h4>Una iniciativa de</h4>
         <div class="row image">
           <a href="http://pirata.cat"><img src="/images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
         </div>
@@ -67,8 +67,8 @@
             <iframe class="social-button" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpirata.cat&amp;send=false&amp;layout=standard&amp;width=80&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35&amp;appId=178224635584623" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:24px;" allowTransparency="true"></iframe>
           </div>
         </div>
-        <h4>Other promoters</h4>
-        <p>These organizations have endorsed the campaign:</p>
+        <h4>Altres promotors</h4>
+        <p>Aquestes organitzacions s'uneixen a la campanya:</p>
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
