--- a/es/index.html
+++ b/es/index.html
@@ -6,10 +6,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Megaupload Affected User's Platform</title>
-  <link rel="stylesheet" href="stylesheets/app.css">
+  <title>Denuncia conjunta de afectados por el cierre de Megaupload</title>
+  <link rel="stylesheet" href="/stylesheets/app.css">
   <!--[if lt IE 9]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
+    <link rel="stylesheet" href="/stylesheets/ie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <link href="https://plus.google.com/112149620641776669374" rel="publisher" />
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3>Joint complaint of the affected by the closure of Megaupload</h3>
+        <h3>Denuncia conjunta de afectados por el cierre de Megaupload</h3>
         <ul id="lang">
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
@@ -27,20 +27,21 @@
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
-            <p>Millions of legitimate users have been crippled by the US authority's enforcement of their law outside their jurisdiction.</p>
+            <p>El repentino cierre de Megaupload por parte de las autoridades de EEUU ha afectado a millones de personas que hacían un uso legítimo de este servicio.</p>
             <div id="stock" class="row">
               <div class="twelve columns">
                 <a href="http://www.flickr.com/photos/rclupes/6729919585/"><img src="http://farm8.staticflickr.com/7027/6729919585_e2c1894234.jpg" alt="#20 - Megaupload by Ricard Clupés" title="#20 - Megaupload by Ricard Clupés"></a>
               </div>
             </div>
-            <p>The FBI has caused incalculable damage, far in excess of the losses claimed by the content lobbies, in a failed attempt to prevent access to the media content hosted on Megaupload, some of which they claim to have been violating US copyright. However, as this content is still available via other services on the web, it shows us not only the uselessness of these measures but also serves as a reminder that these files are not necessarily, nor have been shown to be, illegal in other countries.</p>
-            <p>In contrast, by closing the service they have impeded the access to millions of archives from private individuals and organisations, causing huge personal, economic and image damages to millions of people; as well as infringing articles 197 and 198 of the Spanish Penal Code by misappropiating personal data. They have also breached basic underpinnings of the UK Data Protection Act 1998 and/or Computer Misuse Act 1990 and potentially are in violation of The British Official Secrets Act prohibiting espionage and sharing of sensitive data with foreign powers.</p>
-            <p>The damages caused by the closure of Megaupload are completely unjustified and inadmissible. For this reason Pirates of Catalonia, in collaboration with Pirate Parties International and the other Pirate Parties supporting this campaign, will facilitate submission of the complaints against the USA authorities in different countries, thus increasing the chances of a positive sentence. </p>
-            <p>In order to make this joint complaint, a platform has been created for those affected by Megaupload's shutdown, to which any person or organisation affected by this closure can  adhere, regardless of the type of account they had on Megaupload.</p>
-            <p>This initiative is intended to be a starting point for legitimate internet users to help defend themselves from the legal abuses promoted by cultural lobbies.</p>
-            <p>Regardless of ideology and our opinion regarding Megaupload, actions like the one carried out with the closure of this service cause a huge damage to the users and are an unacceptable violation of their rights.</p>
-            <p>For these reasons, we ask everyone to make a call to the population to join this initiative and spread it, as actions like this one can not and should not be forgiven. </p>
-            <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="hide-on-phones hide-on-tablets nice radius large blue button">Join!</a></p>
+            <p>El FBI ha causado daños incalculables, muy superiores al beneficio que perseguían con la acción emprendida, en un intento fallido de impedir el acceso a los materiales audiovisuales hospedados en Megaupload que pudieran estar vulnerando copyrights. Sin embargo, estos contenidos siguen estando disponibles en otros tantos servicios en Internet, evidenciando la ineficacia de la medida.</p>
+            <p>Por contra, con el cierre del servicio han impedido el acceso a millones de archivos de particulares y organizaciones, ocasionando graves daños personales, económicos y de imagen a millones de personas; y han vulnerado los artículos 197 y 198 del Código Penal al apropiarse indebidamente de datos de carácter personal.</p>
+            <p>Los daños ocasionados por el cierre de Megaupload están totalmente injustificados y son inadmisibles. Por este motivo, Pirates de Catalunya con la colaboración de Pirate Parties International y los partidos pirata adheridos a esta campaña, facilitará la presentación de denuncias contra las autoridades de EEUU en diversos países, e incrementará así las posibilidades de conseguir una condena.</p>
+            <p>Para la realización de esta demanda conjunta se ha creado una plataforma de afectados por el cierre de Megaupload, a la que puede adherirse cualquier persona u organización que se haya visto perjudicada por el cierre del servicio, independientemente del tipo de cuenta que tuviesen en Megaupload.</p>
+            <p>Esta iniciativa pretende ser un punto de partida para que los legítimos usuarios de Internet podamos defendernos frente a los abusos judiciales impulsados por los lobbies culturales.
+</p>
+            <p>Independientemente de la ideología de cada uno y de la opinión que podamos tener en referencia a Megaupload, acciones como las llevadas a cabo con el cierre del servicio suponen un enorme perjuicio para los usuarios y una vulneración inaceptable de sus derechos.</p>
+            <p>Por todo lo anterior, realizamos un llamamiento a toda la población a fin de que se unan a la iniciativa y la difundan, entendiendo que acciones como la presenciada no pueden ni deben quedar impunes.</p>
+            <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="hide-on-phones hide-on-tablets nice radius large blue button">¡Únete!</a></p>
             <!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -54,9 +55,9 @@
         </div>
       </div>
       <div class="four columns">
-        <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="nice radius large blue button wide">Join!</a></p>
-        <p><a href="https://xifrat.pirata.cat/en/donacions" class="nice radius large white button wide">Donate</a></p>
-        <h4>An initiative of</h4>
+        <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="nice radius large blue button wide">¡Únete!</a></p>
+        <p><a href="https://xifrat.pirata.cat/es/donacions" class="nice radius large white button wide">Dona</a></p>
+        <h4>Una iniciativa de</h4>
         <div class="row image">
           <a href="http://pirata.cat"><img src="/images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
         </div>
@@ -67,8 +68,8 @@
             <iframe class="social-button" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpirata.cat&amp;send=false&amp;layout=standard&amp;width=80&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35&amp;appId=178224635584623" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:24px;" allowTransparency="true"></iframe>
           </div>
         </div>
-        <h4>Other promoters</h4>
-        <p>These organizations have endorsed the campaign:</p>
+        <h4>Otros promotores</h4>
+        <p>Estas organizaciones se han unido a la campaña:</p>
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
