--- a/gl/index.html
+++ b/gl/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Denuncia conjunta de afectados por el cierre de Megaupload</title>
+  <title> Denuncia conxunta de afectados polo peche de Megaupload</title>
   <link rel="stylesheet" href="/stylesheets/app.css">
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="/stylesheets/ie.css">
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3>Denuncia conjunta de afectados por el cierre de Megaupload</h3>
+        <h3> Denuncia conxunta de afectados polo peche de Megaupload</h3>
         <ul id="lang">
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
