--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Megaupload Affected User's Platform</title>
+  <title>Joint complaint of the affected by the closure of Megaupload</title>
   <link rel="stylesheet" href="stylesheets/app.css">
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="stylesheets/ie.css">
