--- a/gl/index.html
+++ b/gl/index.html
@@ -6,19 +6,29 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title> Denuncia conxunta de afectados polo peche de Megaupload</title>
+  <title>Denuncia conxunta de afectados polo peche de Megaupload</title>
   <link rel="stylesheet" href="/stylesheets/app.css">
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="/stylesheets/ie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <link href="https://plus.google.com/112149620641776669374" rel="publisher" />
+  <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-10848153-13']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+  </script>
 </head>
 <body>
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3> Denuncia conxunta de afectados polo peche de Megaupload</h3>
+        <h3>Denuncia conxunta de afectados polo peche de Megaupload</h3>
         <ul id="lang">
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
@@ -28,6 +38,15 @@
         <div class="row">
           <div class="twelve columns" id="text">
             <p>O repentino peche de Megaupload pola parte das autoridades dos EE.UU. afectou a millóns de persoas que facían uso lexítimo deste servizo.</p>
+			<!-- AddThis Button BEGIN -->
+            <div class="addthis_toolbox addthis_default_style ">
+            <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
+            <a class="addthis_counter addthis_pill_style"></a>
+            </div>
+            <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4f1ca3ad1472dc24"></script>
+            <!-- AddThis Button END -->
             <div id="stock" class="row">
               <div class="twelve columns">
                 <a href="http://www.flickr.com/photos/rclupes/6729919585/"><img src="http://farm8.staticflickr.com/7027/6729919585_e2c1894234.jpg" alt="#20 - Megaupload by Ricard Clupés" title="#20 - Megaupload by Ricard Clupés"></a>
@@ -40,7 +59,7 @@
             <p>Esta iniciativo quere ser un punto de partida para que os lexítimos usuarios da Internet poidamos defendernos fronte ós abusos xudiciais estimulados polos lobbies culturais.</p>
             <p>Independentemente da ideoloxía de cada quen e da opinión que poidamos ter en referencia a Megaupload, accións coma as realizadas co peche do servizo supoñen un inxente dano para os usuarios e unha violación inaceptable dos seus dereitos.</p>
             <p>Polo dito, facemos un chamamento a todo o mundo co fin de sumar forzas á iniciativa e que se difunda, evidenciando que accións coma a presenciada non poden nin deben quedar impunes.</p>
-            <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="hide-on-phones hide-on-tablets nice radius large blue button">Engadir</a></p>
+            <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="hide-on-phones hide-on-tablets nice radius large blue button">¡Asóciate!</a></p>
             <!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -54,8 +73,8 @@
         </div>
       </div>
       <div class="four columns">
-        <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="nice radius large blue button wide">Engadir</a></p>
-        <p><a href="https://xifrat.pirata.cat/es/donacions" class="nice radius large white button wide">Dona</a></p>
+        <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="nice radius large blue button wide">¡Asóciate!</a></p>
+        <p><a href="https://xifrat.pirata.cat/es/donacions" class="nice radius large white button wide">Donacións</a></p>
         <h4>Unha iniciativa da</h4>
         <div class="row image">
           <a href="http://pirata.cat"><img src="/images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
@@ -68,7 +87,7 @@
           </div>
         </div>
         <h4>Outros promotores</h4>
-        <p>Esas organizacións se xuntaron á campaña:</p>
+        <p>Estas organizacións sumáronse a campaña:</p>
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
