--- a/tos/gl/index.html
+++ b/tos/gl/index.html
@@ -6,19 +6,29 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>LOPD - Joint complaint of the affected by the closure of Megaupload</title>
+  <title>LOPD - Denuncia conjunta de afectados por el cierre de Megaupload</title>
   <link rel="stylesheet" href="/stylesheets/app.css">
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="/stylesheets/ie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <link href="https://plus.google.com/112149620641776669374" rel="publisher" />
+  <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-10848153-13']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+  </script>
 </head>
 <body>
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3>Joint complaint of the affected by the closure of Megaupload</h3>
+        <h3>Denuncia conjunta de afectados por el cierre de Megaupload</h3>
         <ul id="lang">
           <li><a href="http://megaupload.pirata.cat/tos/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/tos/gl/">Galego</a></li>
