--- a/tos/index.html
+++ b/tos/index.html
@@ -30,22 +30,22 @@
       <div class="eight columns">
         <h3>Denuncia conjunta de afectados por el cierre de Megaupload</h3>
         <ul id="lang">
-          <li><a href="http://megaupload.pirata.cat/tos/ca/">Català</a></li>
-          <li><a href="http://megaupload.pirata.cat/tos/gl/">Galego</a></li>
-          <li><a href="http://megaupload.pirata.cat/tos/es/">Español</a></li>
-          <li><a href="http://megaupload.pirata.cat/tos/">English</a></li>
+          <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
+          <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
+          <li><a href="http://megaupload.pirata.cat/es/">Español</a></li>
+          <li><a href="http://megaupload.pirata.cat/">English</a></li>
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
-		  <h2>Derecho de información</h2> 
+		  <h4>Derecho de información</h4> 
 		  <p>A los efectos de lo previsto en la Ley Orgánica de Protección de Datos de carácter personal Pirates de Catalunya informa al usuario de la existencia de un fichero automatizado de datos de carácter personal creado por Pirates de Catalunya y bajo su responsabilidad, con la finalidad de realizar el mantenimiento y la gestión en relación con los solicitantes de información que han accedido a través de los formularios electrónicos a esta página web o mediante mensajes de correo electrónico. El antes mencionado fichero se ha inscrito en la <a href="http://www.agpd.es/">Agencia de Protección de Datos</a>.</p>
-		  <h2>Finalidad</h2> 
+		  <h4>Finalidad</h4> 
 		  <p>Los datos que Ud. facilita a Pirates de Catalunya tienen como finalidad gestionar su solicitud de alta o facilitarle la información o servicios que nos solicite.</p>
-		  <h2>Consentimiento del usuario</h2> 
+		  <h4>Consentimiento del usuario</h4> 
 		  <p>El uso de los formularios referidos, así como el envío de un correo electrónico, supone el consentimiento del remitente al tratamiento automatizado de los datos incluidos para exclusivo uso interno del partido. No obstante, este consentimiento podrá ser revocado en cualquier momento, poniéndo de manifiesto, por tanto, el carácter facultativo y no obligatorio del mismo.</p>
-		  <h2>Derecho de acceso</h2> 
+		  <h4>Derecho de acceso</h4> 
 		  <p>Podrá ejercer el derecho de acceso, rectificación, cancelación y oposición al tratamiento de sus datos personales, en los términos y condiciones previstos en la propia LOCP. Para su mayor comodidad, también podrá ejercer estos derechos enviando un correo electrónico a la direccion <a href="mailto:lopd@pirata.cat">lopd@pirata.cat</a>. La página web del partido no utiliza técnicas de "Spamming", ni tampoco quedan registrados los usuarios per el mero hecho de visitarla. Pirates de Catalunya sólamente tratará la información que el usuario nos comunique por medio de correo electrónico o mediante algún formulario.</p>
-		  <h2>Seguridad</h2> 
+		  <h4>Seguridad</h4> 
 		  <p>Pirates de Catalunya mantiene los niveles de seguridad de protección de datos según el Real Decreto 1720/2007, de 21 de Diciembre, relativo a las medidas de seguridad de los ficheros automatizados que contengan datos de carácter personal y ha establecido todos los medios técnicos a su alcance a fin de evitar ninguna pérdida, mal uso, alteración, acceso no autorizado o robo de los datos que Ud. facilite a Pirates de Catalunya, sin perjuicio de informarle de que tales medidas en internet no son inexpugnables. Para cualquier tema relativo a la protección de datos de carácter personal, puede ponerse en contacto con nosotros en la dirección de correo electrónico <a href="mailto:partit@pirata.cat">partit@pirata.cat</a>.</p>
           </div>
         </div>
