--- a/ca/index.html
+++ b/ca/index.html
@@ -41,7 +41,7 @@
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_tweet" addthis:title="Denúncia conjunta d'afectats pel tancament de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
@@ -60,10 +60,10 @@
             <p>Independentment de la ideologia de cadascú i de la opinió que puguem tenir en referència a Megaupload, accions com les portades a terme amb el tancament del servei suposen un enorme perjudici per als usuaris i una vulneració inacceptable dels seus drets.</p>
             <p>Per tot l'exposat, fem una crida a la població per a què s'uneixi a la iniciativa i la difongui, entenent que accions com la presenciada no poden ni han de quedar impunes.</p>
             <p><a href="https://xifrat.pirata.cat/megaupload_ca" class="hide-on-phones hide-on-tablets nice radius large blue button">Uneix-te!</a></p>
-            <!-- AddThis Button BEGIN -->
+			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_tweet" addthis:title="Denúncia conjunta d'afectats pel tancament de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
