--- a/gl/index.html
+++ b/gl/index.html
@@ -41,7 +41,7 @@
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_tweet" addthis:title="Denuncia conxunta de afectados polo peche de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
@@ -60,10 +60,10 @@
             <p>Independentemente da ideoloxía de cada quen e da opinión que poidamos ter en referencia a Megaupload, accións coma as realizadas co peche do servizo supoñen un inxente dano para os usuarios e unha violación inaceptable dos seus dereitos.</p>
             <p>Polo dito, facemos un chamamento a todo o mundo co fin de sumar forzas á iniciativa e que se difunda, evidenciando que accións coma a presenciada non poden nin deben quedar impunes.</p>
             <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="hide-on-phones hide-on-tablets nice radius large blue button">¡Asóciate!</a></p>
-            <!-- AddThis Button BEGIN -->
+			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_tweet" addthis:title="Denuncia conxunta de afectados polo peche de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
