--- a/es/index.html
+++ b/es/index.html
@@ -41,7 +41,7 @@
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_tweet" addthis:title="Denuncia conjunta de afectados por el cierre de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
@@ -61,10 +61,10 @@
             <p>Independientemente de la ideología de cada uno y de la opinión que podamos tener en referencia a Megaupload, acciones como las llevadas a cabo con el cierre del servicio suponen un enorme perjuicio para los usuarios y una vulneración inaceptable de sus derechos.</p>
             <p>Por todo lo anterior, realizamos un llamamiento a toda la población a fin de que se unan a la iniciativa y la difundan, entendiendo que acciones como la presenciada no pueden ni deben quedar impunes.</p>
             <p><a href="https://xifrat.pirata.cat/es/megaupload_es" class="hide-on-phones hide-on-tablets nice radius large blue button">¡Únete!</a></p>
-            <!-- AddThis Button BEGIN -->
+			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_tweet" addthis:title="Denuncia conjunta de afectados por el cierre de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
