--- a/fr/index.html
+++ b/fr/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Denúncia conjunta d'afectats pel tancament de Megaupload</title>
+  <title>Plainte commune des personnes affectées par la fermeture de Megaupload</title>
   <link rel="stylesheet" href="/stylesheets/app.css">
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="/stylesheets/ie.css">
@@ -28,7 +28,7 @@
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3>Denúncia conjunta d'afectats pel tancament de Megaupload</h3>
+        <h3>Plainte commune des personnes affectées par la fermeture de Megaupload</h3>
         <ul id="lang">
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
@@ -37,11 +37,11 @@
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
-            <p>El tancament sobtat de Megaupload per part de les autoritats dels EEUU ha afectat milions de persones que feien un ús legítim d'aquest servei.</p>
+            <p>Des millions d’utilisateurs légitimes se sont subitement retrouvés lésés par la tentative des autorités américaines d’imposer leur propre loi à travers le monde.</p>
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet" addthis:title="Denúncia conjunta d'afectats pel tancament de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
+            <a class="addthis_button_tweet" addthis:title="Plainte commune des personnes affectées par la fermeture de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
@@ -52,18 +52,18 @@
                 <a href="http://www.flickr.com/photos/rclupes/6729919585/"><img src="http://farm8.staticflickr.com/7027/6729919585_e2c1894234.jpg" alt="#20 - Megaupload by Ricard Clupés" title="#20 - Megaupload by Ricard Clupés"></a>
               </div>
             </div>
-            <p>L'FBI ha ocasionat danys incalculables, molt superiors al benefici perseguit amb l'acció empresa, en un intent fracassat d'impedir l'accés als materials audiovisuals hostatjats a Megaupload, que podien vulnerar copyrights. No obstant, aquests continguts continuen disponibles a d'altres serveis d'Internet, fet que evidencia la ineficàcia de la mesura.</p>
-            <p>Per contra, amb el tancament del servei han impedit l'accés a milions d'arxius de particulars i organitzacions, han ocasionat greus danys personals, econòmics i d'imatge a milions de persones; i han vulnerat els artícles 197 i 198 del Codi Penal a l'apropiar-se indegudament de  dades de caràcter personal.</p>
-            <p>Els danys ocasionats pel tancament de Megaupload són totalment injustificats i inadmisibles. Per aquesta raó, Pirates de Catalunya, amb la col·laboració de Pirate Parties International i els partits pirata adherits a aquesta campanya, facilitarà la presentació de denúncies contra les autoritats dels EEUU a diversos països, i incrementarà així les possibilitats d'aconseguir una condemna.</p>
-            <p>Per a la realització d'aquesta demanda conjunta s'ha creat una plataforma d'afectats pel tancament de Megaupload, a la que pot adherir-se qualsevol persona o organització que s'hagi vist perjudicada pel tancament del servei, independentment del tipus de compte que tinguessin a Megaupload.</p>
-            <p>Aquesta iniciativa vol ser un punt de partida per a què els usuaris legítims d'Internet puguem defensar-nos davant dels abusos judicials promoguts pels lobbies culturals.</p>
-            <p>Independentment de la ideologia de cadascú i de la opinió que puguem tenir en referència a Megaupload, accions com les portades a terme amb el tancament del servei suposen un enorme perjudici per als usuaris i una vulneració inacceptable dels seus drets.</p>
-            <p>Per tot l'exposat, fem una crida a la població per a què s'uneixi a la iniciativa i la difongui, entenent que accions com la presenciada no poden ni han de quedar impunes.</p>
-            <p><a href="https://xifrat.pirata.cat/megaupload_ca" class="hide-on-phones hide-on-tablets nice radius large blue button">Uneix-te!</a></p>
+            <p>Le FBI a causé des dommages incalculables, dépassant de loin les prétendues pertes déclarées par les lobbies des ayants droit, au cours d’une vaine tentative d’empêcher l’accès au contenu multimédia hébergé sur Megaupload, dont certains ont été déclarés comme violant la loi américaine sur le droit d’auteur. Parce que ce contenu illégal se trouvera bien vite accessible sur Internet via d’autres services. Cette action ne montre pas seulement la futilité de telles mesures mais rappelle aussi que ces fichiers ne sont pas forcément illégaux, ou n’ont jamais été prouvés comme tels, dans n’importe quel pays, y compris aux États-Unis.</p>
+            <p>En revanche, en fermant le service, ils ont entravé l’accès à des millions de fichiers appartenant à des individus comme à des organisations causant ainsi des pertes personnelles, économiques et d’image potentiellement importantes pour un grand nombre de personnes. De plus, le Parti Pirate souligne que les articles 197 et 198 du Code Pénal espagnol ont probablement été violés en s’appropriant ainsi des données personnelles à tort.</p>
+	    <p>Les larges dégâts causés par la fermeture soudaine de Megaupload sont injustifiés et complètement disproportionnés par rapport à la cible visée. C’est pour cela que le Parti Pirate Catalan, en collaboration avec le Parti Pirate International et d’autres Partis Pirates (incluant le Parti Pirate du Royaume-Uni), a débuté une enquête sur de potentielles failles législatives et soutienda les poursuites en justice contre les autorités américaines dans autant de pays que possible, afin que justice soit rendue.</p>
+            <p>Afin de faire plainte commune, une plateforme a été créée où toute personne ou organisation ayant été affectée par cette fermeture peut exprimer son intérêt, indépendamment du type de compte qu’elle avait sur Megaupload.</p>
+            <p>Cette initiative est un point de départ pour aider les utilisateurs légitimes d’Internet à se défendre contre les abus légaux promus par ceux qui souhaitent cadenasser les ressources culturelles au profit de leurs propres gains financiers.</p>
+            <p>Quelles que soient les opinions quant à la légalité ou la morale des personnes exploitant Megaupload, des actions telles que la fermeture de ce service ont infligé des dommages énormes aux utilisateurs en règle de ce site et sont des violations de leurs droits inacceptables et disproportionnées.</p>
+            <p>Pour toutes les raisons énoncées, nous vous demandons de nous rejoindre et de nous soutenir en propageant cet appel, car des actes tels que ceux-ci ne doivent pas et ne devraient pas être pardonnés.</p>
+            <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="hide-on-phones hide-on-tablets nice radius large blue button">Joignez-vous!</a></p>
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet" addthis:title="Denúncia conjunta d'afectats pel tancament de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
+            <a class="addthis_button_tweet" addthis:title="Plainte commune des personnes affectées par la fermeture de Megaupload #megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
@@ -73,9 +73,9 @@
         </div>
       </div>
       <div class="four columns">
-        <p><a href="https://xifrat.pirata.cat/megaupload_ca" class="nice radius large blue button wide">Uneix-te!</a></p>
-        <p><a href="https://xifrat.pirata.cat/donacions" class="nice radius large white button wide">Dóna</a></p>
-        <h4>Una iniciativa de</h4>
+        <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="nice radius large blue button wide">Joignez-vous!</a></p>
+        <p><a href="https://xifrat.pirata.cat/en/donacions" class="nice radius large white button wide">Faire un don</a></p>
+        <h4>Une initiative de</h4>
         <div class="row image">
           <a href="http://pirata.cat"><img src="/images/pcat.png" alt="Pirates de Catalunya" title="Pirates de Catalunya"></a>
         </div>
@@ -86,8 +86,8 @@
             <iframe class="social-button" src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fpirata.cat&amp;send=false&amp;layout=standard&amp;width=80&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=35&amp;appId=178224635584623" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:24px;" allowTransparency="true"></iframe>
           </div>
         </div>
-        <h4>Altres promotors</h4>
-        <p>Aquestes organitzacions s'uneixen a la campanya:</p>
+        <h4>D'autres promoteurs</h4>
+        <p>Ces organisations ont rejoint la campagne:</p>
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
