--- a/gl/index.html
+++ b/gl/index.html
@@ -33,7 +33,7 @@
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
           <li><a href="http://megaupload.pirata.cat/es/">Español</a></li>
-          <li><a href="http://megaupload.pirata.cat/">English</a></li>
+          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li>
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
@@ -91,7 +91,7 @@
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
-          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li>
+          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li>
         </ul>
       </div>
     </div>
