--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Joint complaint of the affected by the closure of Megaupload</title>
+  <title>Joint complaint of those affected by the closure of Megaupload service</title>
   <link rel="stylesheet" href="/stylesheets/app.css">
   <!--[if lt IE 9]>
     <link rel="stylesheet" href="/stylesheets/ie.css">
@@ -28,17 +28,17 @@
   <div class="container">
     <div class="row" id="main">
       <div class="eight columns">
-        <h3>Joint complaint of the affected by the closure of Megaupload</h3>
+        <h3>Joint complaint of those affected by the closure of Megaupload service</h3>
         <ul id="lang">
           <li><a href="http://megaupload.pirata.cat/ca/">Català</a></li>
           <li><a href="http://megaupload.pirata.cat/gl/">Galego</a></li>
           <li><a href="http://megaupload.pirata.cat/es/">Español</a></li>
-          <li><a href="http://megaupload.pirata.cat/">English</a></li>
+          <li><a href="http://megaupload.pirata.cat/">English</a></li><li><a href="http://megaupload.pirata.cat/fr/">Français</a></li>
         </ul>
         <div class="row">
           <div class="twelve columns" id="text">
-            <p>Millions of legitimate users have been crippled by the US authority's enforcement of their law outside their jurisdiction.</p>
-			<!-- AddThis Button BEGIN -->
+            <p>Millions of legitimate users have been crippled by the US authority's attempt to enforce their own law across the world.</p>
+		<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
             <a class="addthis_button_tweet" addthis:title="Joint complaint of the affected by the closure of Megaupload #megacomplaint" tw:via="partit_pirata"></a>
@@ -52,15 +52,16 @@
                 <a href="http://www.flickr.com/photos/rclupes/6729919585/"><img src="http://farm8.staticflickr.com/7027/6729919585_e2c1894234.jpg" alt="#20 - Megaupload by Ricard Clupés" title="#20 - Megaupload by Ricard Clupés"></a>
               </div>
             </div>
-            <p>The FBI has caused incalculable damage, far in excess of the losses claimed by the content lobbies, in a failed attempt to prevent access to the media content hosted on Megaupload, some of which they claim to have been violating US copyright. However, as this content is still available via other services on the web, it shows us not only the uselessness of these measures but also serves as a reminder that these files are not necessarily, nor have been shown to be, illegal in other countries.</p>
-            <p>In contrast, by closing the service they have impeded the access to millions of archives from private individuals and organisations, causing huge personal, economic and image damages to millions of people; as well as infringing articles 197 and 198 of the Spanish Penal Code by misappropiating personal data. They have also breached basic underpinnings of the UK Data Protection Act 1998 and/or Computer Misuse Act 1990 and potentially are in violation of The British Official Secrets Act prohibiting espionage and sharing of sensitive data with foreign powers.</p>
-            <p>The damages caused by the closure of Megaupload are completely unjustified and inadmissible. For this reason Pirates of Catalonia, in collaboration with Pirate Parties International and the other Pirate Parties supporting this campaign, will facilitate submission of the complaints against the USA authorities in different countries, thus increasing the chances of a positive sentence. </p>
-            <p>In order to make this joint complaint, a platform has been created for those affected by Megaupload's shutdown, to which any person or organisation affected by this closure can  adhere, regardless of the type of account they had on Megaupload.</p>
-            <p>This initiative is intended to be a starting point for legitimate internet users to help defend themselves from the legal abuses promoted by cultural lobbies.</p>
-            <p>Regardless of ideology and our opinion regarding Megaupload, actions like the one carried out with the closure of this service cause a huge damage to the users and are an unacceptable violation of their rights.</p>
-            <p>For these reasons, we ask everyone to make a call to the population to join this initiative and spread it, as actions like this one can not and should not be forgiven. </p>
+            <p>The FBI has caused incalculable damage, far in excess of the losses claimed by the content lobbies, in a fruitless attempt to prevent access to the media content hosted on Megaupload, some of which they claim to have been infringing copyright under US law. However, as much of the unlawful content will still be available via other services on the web, this action not only shows us the futility of these measures but also serves as a reminder that these files are not necessarily, nor have been shown to be, illegal in any country, including the US.</p>
+            <p>In contrast, by closing the service they have impeded the access to millions of archives of both private individuals and organisations, potentially causing huge personal, economic and image damages to a vast number of people. In addition, the Pirate Party understands they may have violated Articles 197 and 198 of the Spanish Penal Code by misappropiating personal data.</p>
+            <p>The widespread damage caused by the sudden closure of Megaupload is unjustified and completely disproportionate to the aim intended. For this reason Pirates of Catalonia, in  collaboration with Pirate Parties International and other Pirate Parties [including the Pirate Party of the United Kingdom], have begun investigating these potential breaches of law and will facilitate submission of complaints against the US authorities in as many countries as possible, to ensure a positive and just result.</p>
+            <p>In order to make this joint complaint, a platform has been created where any person or organisation affected by this closure can register their interest, regardless of the type of account they had on Megaupload.</p>
+            <p>This initiative is a starting point for legitimate internet users to help defend themselves from the legal abuses promoted by those wishing to aggressively lock away cultural materials for their own financial gain.</p>
+            <p>Regardless of ideology, or opinions on the legality or morality of those running Megaupload, actions such as the closure of this service cause huge damage to lawful users of the sites and are unacceptable and disproportionate violations of their rights.</p>
+            <p>For these reasons, we ask that everyone spread the call to join this initiative, as actions like this one cannot and should not be forgiven.</p>
+	    <p><em>Note: US citizens joining this campaign will be forwarded to <a href="https://www.eff.org/">EFF</a>.</em></p>
             <p><a href="https://xifrat.pirata.cat/en/megaupload_en" class="hide-on-phones hide-on-tablets nice radius large blue button">Join!</a></p>
-			<!-- AddThis Button BEGIN -->
+		<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
             <a class="addthis_button_tweet" addthis:title="Joint complaint of the affected by the closure of Megaupload #megacomplaint" tw:via="partit_pirata"></a>
@@ -91,7 +92,7 @@
         <ul class="disc">
           <li><a href="http://piratasdegalicia.org/">Piratas de Galicia</a></li>
           <li><a href="http://partidopirata.es/">Partido Pirata</a></li>
-          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li>
+          <li><a href="http://www.pirateparty.org.uk/">Pirate Party UK</a></li><li><a href="http://www.pirati.cz/tiskove-zpravy/piratska-strana-odsuzuje-razii-proti-megauploadu">Česká pirátská strana</a></li><li><a href="http://pp-ua.org">Піратська партія України</a></li><li><a href="http://piratpartiet.se">Piratpartiet</a></li><li><a href="http://partipirate.org/">Parti Pirate</a></li><li><a href="https://www.eff.org/">Electronic Frontier Foundation</a></li><li><a href="http://www.piratenpartij.nl/">Piratenpartij</a></li><li><a href="http://www.pirateparty.ca/">Pirate Party of Canada</a></li><li><a href="http://piratskapartija.com/">Piratska Partija</a></li>
         </ul>
       </div>
     </div>
